--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-firebase/app": "^16.5.1",
     "@react-native-firebase/firestore": "^16.5.1",
     "@react-navigation/bottom-tabs": "^6.5.5",
